[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/ui/progressBar.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/progressBarFiller.png" type="Texture" id=2]
[ext_resource path="res://assets/effects/characterSelctionKnight.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/tile_0096.png" type="Texture" id=4]
[ext_resource path="res://scripts/characters/player.gd" type="Script" id=5]
[ext_resource path="res://scripts/characters/class/knight.gd" type="Script" id=6]
[ext_resource path="res://assets/sprites/tile_0107.png" type="Texture" id=7]
[ext_resource path="res://player/skills/knight/swordMenuOption.gd" type="Script" id=8]
[ext_resource path="res://player/skills/knight/shieldMenuOption.gd" type="Script" id=9]
[ext_resource path="res://assets/ui/shiled_portrait.png" type="Texture" id=10]
[ext_resource path="res://assets/ui/hand.png" type="Texture" id=11]
[ext_resource path="res://assets/ui/sword_portrait.png" type="Texture" id=12]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.0
height = 0.0

[sub_resource type="Animation" id=2]
resource_name = "Sword"
length = 0.4
step = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0250112, 0.272189, 0.332662 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 18.2, 90.0, 90.0, 18.2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0250112, 0.272189, 0.332662 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 9, -5 ), Vector2( 15, 2 ), Vector2( 15, 2 ), Vector2( 9, -5 ) ]
}

[node name="Knight" type="KinematicBody2D"]
script = ExtResource( 5 )

[node name="SelectedBackground" type="TextureRect" parent="."]
margin_left = -12.0
margin_top = -12.0
margin_right = 28.0
margin_bottom = 28.0
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -2 )
texture = ExtResource( 4 )

[node name="playerCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
shape = SubResource( 1 )

[node name="Class" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="Sword" type="Sprite" parent="Class"]
position = Vector2( 9, -5 )
rotation = 0.31765
texture = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Class/Sword"]
anims/Sword = SubResource( 2 )

[node name="CharacterActionsMenu" type="Node2D" parent="Class"]

[node name="swordMenuOption" type="TextureRect" parent="Class/CharacterActionsMenu"]
margin_left = 22.0
margin_top = -33.0
margin_right = 33.0
margin_bottom = -22.0
texture = ExtResource( 12 )
script = ExtResource( 8 )

[node name="shieldMenuOption" type="TextureRect" parent="Class/CharacterActionsMenu"]
margin_left = 22.0
margin_top = -19.0
margin_right = 33.0
margin_bottom = -8.0
texture = ExtResource( 10 )
script = ExtResource( 9 )

[node name="choosersGroup" type="Node2D" parent="Class"]

[node name="HandChooser1" type="TextureRect" parent="Class/choosersGroup"]
visible = false
margin_left = 10.0
margin_top = -33.0
margin_right = 21.0
margin_bottom = -22.0
texture = ExtResource( 11 )

[node name="HandChooser2" type="TextureRect" parent="Class/choosersGroup"]
visible = false
margin_left = 10.0
margin_top = -19.0
margin_right = 21.0
margin_bottom = -8.0
texture = ExtResource( 11 )

[node name="SwordArea" type="Area2D" parent="Class"]

[node name="SwordCollider" type="CollisionPolygon2D" parent="Class/SwordArea"]
position = Vector2( 9, -5 )
rotation = 0.31765
polygon = PoolVector2Array( -3.46162, -4.12519, 2.21228, 0.325303, 8.18554, 8.88802, 14.8354, 6.70167, 10.762, -2.48571, 0.351236, -8.53678 )
disabled = true

[node name="KnightTimer1" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="KnightTimer2" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="KnightTimer3" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="KnightTimer4" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="KnightTimer5" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="KnightTimer6" type="Timer" parent="."]
wait_time = 6.0
one_shot = true
autostart = true

[node name="TurnProgressBar" type="TextureProgress" parent="."]
margin_left = -8.0
margin_top = -14.0
margin_right = 32.0
margin_bottom = 26.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 2 )

[connection signal="animation_finished" from="Class/Sword/AnimationPlayer" to="Class" method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="KnightTimer1" to="." method="_on_KnightTime1_timeout"]
[connection signal="timeout" from="KnightTimer2" to="." method="_on_KnightTime2_timeout"]
[connection signal="timeout" from="KnightTimer3" to="." method="_on_KnightTime3_timeout"]
[connection signal="timeout" from="KnightTimer4" to="." method="_on_KnightTime4_timeout"]
[connection signal="timeout" from="KnightTimer5" to="." method="_on_KnightTime5_timeout"]
[connection signal="timeout" from="KnightTimer6" to="." method="_on_KnightTime6_timeout"]
